[package]
edition = "2021"
name = "pratt-parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = {version = "4.4.18", features = ["derive"]}
color-eyre = "0.6.2"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
